tests/rosetta/out/Pascal/100-prisoners.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/100-prisoners.pas
100-prisoners.pas(21,16) Error: Operator is not overloaded: "TDateTime" mod "LongInt"
100-prisoners.pas(56,29) Error: Identifier not found "_appendList"
100-prisoners.pas(56,57) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
